--- a/Serwis/index.html
+++ b/Serwis/index.html
@@ -51,7 +51,7 @@
         <img src="../images/AdobeStock_197465113.jpeg" class="main__article_item1">
         <div class="main__article_item2"></div>
         <div class="main__article_item3">
-            <input type="search" value="masno geng">
+            <input type="search" class="main__article_item3_input" value="SZUKAJ">
         </div>
     </div>
 
