--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class="item2">
             <div class="item2__gradient"></div>
-            <img class="item2__photo" src="images/AdobeStock_197465113.jpeg" alt="">
+            <img src="images/AdobeStock_197465113.jpeg" class="item2__photo" alt="">
             <div class="item2__container">
                 <div class="item2__header">JAKOŚĆ</div>
                 <div class="item2__text">Sprzedawane przez nas części są najwyższej jakości, gwarantują
