--- a/Produkty/index.html
+++ b/Produkty/index.html
@@ -48,7 +48,7 @@
 </main>
 
     <div class="main__container">
-        <img src="../images/Banne_v3r.jpg" alt="" class="main__image">
+        <div class="main__image"></div>
         <div class="main__timeline"></div>
         <div class="main__article">
             <div class="main__article_header">Tekst</div>
