--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img id="nav_logo"src="images/Logo1.png" width="160px" height="42px" alt="">
         <input type="button" class="list" value="" id="icon1" />
         <input type="button" class="list" value="" id="icon2" />
-        <div class="nav__text">|</div>
+        <!-- <div class="nav__text">|</div> -->
 
-        <div id="icon3">
+        <!-- <div id="icon3">
         </div>
         <div id="icon-text1">
         +48 513106080
@@ -25,7 +25,10 @@
         <div id="icon4"></div>
         <div id="icon-text2">
         olafltd@gmail.com
-        </div>
+        </div> -->
+
+        <input type="button" onclick="location.href='../Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
+        <input type="button" onclick="location.href='../Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
 
         <div class="wrapper">
             <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
