--- a/Maszyny/index.html
+++ b/Maszyny/index.html
@@ -13,7 +13,7 @@
     
 <main class="container-main">
     <nav>
-        <!-- <img id="nav_logo"src="./images/Logo1.png" width="160px" height="42px" alt=""> -->
+        <img id="nav_logo" src="../images/Logo1.png" width="160px" height="42px" alt="">
         <input type="button" class="list" value="" id="icon1" />
         <input type="button" class="list" value="" id="icon2" />
         <div class="nav__text">|</div>
