--- a/Kontakt/index.html
+++ b/Kontakt/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <script defer src="../fontawesome-free-5.15.2-web/js/all.js"></script>
 </head>
 <body>
@@ -19,10 +20,10 @@
     
 <main class="container-main">
     <nav>
-        <img id="nav_logo"src="../images/Logo1.png" width="160px" height="42px" alt="">
+        <img onclick="location.href='../index.html'" id="nav_logo"src="../images/Logo1.png" width="160px" height="42px" alt="">
         <input type="button" class="list" value="" id="icon1" />
         <input type="button" class="list" value="" id="icon2" />
-        <!-- <div class="nav__text">|</div> -->
+        <div class="nav__text">|</div>
 
         <!-- <div id="icon3">
         </div>
@@ -34,8 +35,8 @@
         olafltd@gmail.com
         </div> -->
 
-        <input type="button" onclick="location.href='../Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
-        <input type="button" onclick="location.href='../Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
+        <!-- <input type="button" onclick="location.href='/Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
+        <input type="button" onclick="location.href='/Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" /> -->
         
         <div class="wrapper">
             <input type="button" onclick="location.href='../O firmie/index.html'" class="list" value="|  O firmie  |" />
