--- a/O firmie/index.html
+++ b/O firmie/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O firmie</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
 </head>
@@ -13,12 +14,12 @@
     
 <main class="container-main">
     <nav>
-        <img id="nav_logo"src="../images/Logo1.png" width="160px" height="42px" alt="">
+        <img onclick="location.href='../index.html'" id="nav_logo"src="../images/Logo1.png" width="160px" height="42px" alt="">
         <input type="button" class="list" value="" id="icon1" />
         <input type="button" class="list" value="" id="icon2" />
         <div class="nav__text">|</div>
 
-        <div id="icon3">
+        <!-- <div id="icon3">
         </div>
         <div id="icon-text1">
         +48 513106080
@@ -26,7 +27,8 @@
         <div id="icon4"></div>
         <div id="icon-text2">
         olafltd@gmail.com
-        </div>
+        </div> -->
+        
         <div class="wrapper">
             <input type="button" onclick="location.href='../O firmie/index.html'" class="list" value="|  O firmie  |" />
             <input type="button" onclick="location.href='../Produkty/index.html'" class="list" value="|  Produkty  |" />
