--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OlafLTD</title>
+    <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
@@ -27,8 +28,8 @@
         olafltd@gmail.com
         </div> -->
 
-        <input type="button" onclick="location.href='../Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
-        <input type="button" onclick="location.href='../Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
+        <input type="button" onclick="location.href='/Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
+        <input type="button" onclick="location.href='/Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
 
         <div class="wrapper">
             <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
