Poprawka koloru background, zmiana koloru przy najechaniu

--- a/Logowanie/index.html
+++ b/Logowanie/index.html
@@ -60,7 +60,7 @@
                 <div class="main__article_form_text">Hasło</div>
                 <input class="main__article_form_input" type="password">
             </div>
-        <button>Zaloguj się</button>
+        <button class="main__article_form_button">Zaloguj się</button>
         </form>
     </div>
 
