--- a/O firmie/index.html
+++ b/O firmie/index.html
@@ -51,7 +51,7 @@
     
     <div class="main__article">
         <img src="../images/AdobeStock_243092787.jpeg" alt="" class="main__article_banner">
-        <div class="main__article_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fugiat mollitia in et ea, eveniet aliquam numquam nesciunt error. Nihil officiis iusto accusamus illum. Architecto doloremque ex corporis est tempora aperiam voluptatibus ducimus expedita quis officia. Culpa alias nostrum eum dignissimos, iure nobis quos amet similique veritatis, nemo ullam obcaecati!</div>
+        <div class="main__article_text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, aliquam eum? Esse nulla similique ducimus obcaecati iure tenetur, illo deleniti blanditiis et tempore? Dicta quidem magni veniam recusandae, vel ipsa fugiat nisi similique explicabo maxime asperiores consequuntur, illum veritatis neque temporibus deleniti! Maxime, placeat necessitatibus consequuntur, soluta repellendus itaque eum error nesciunt, non illo corrupti? Sapiente, suscipit! Odio, fuga fugiat!</div>
     </div>
 
         <footer class="container">
