prawie gotowa stronka elo

--- a/Kontakt/index.html
+++ b/Kontakt/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="scroller">
-        <img src="../images/instagram.svg" alt="" id="ig">
+        <i class="fab fa-instagram" id="ig"></i>
         <i class="fab fa-facebook-square" id="fb"></i>
         <i class="fab fa-whatsapp" id="wa"></i>
     </div>
