--- a/Produkty/index.html
+++ b/Produkty/index.html
@@ -50,7 +50,7 @@
 </main>
 
     <div class="main__container">
-        <div class="main__image"></div>
+        <img alt="Ni ma" src="../images/Banne_v3r.jpg" class="main__image">
         <div class="main__timeline"></div>
         <div class="main__article">
             <div class="main__article_header">Tekst</div>
