--- a/PanelAdm/index.html
+++ b/PanelAdm/index.html
@@ -8,18 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
     
 <main class="container-main">
     <nav>
-        <img onclick="location.href='../index.html'" id="nav_logo"src="./images/Logo1.png" width="160px" height="42px" alt="">
+        <img onclick="location.href='../index.html'" id="nav_logo"src="../images/Logo1.png" width="160px" height="42px" alt="">
         <input type="button" class="list" value="" id="icon1" />
         <input type="button" class="list" value="" id="icon2" />
         <div class="nav__text">|</div>
 
-        <div id="icon3">
+        <!-- <div id="icon3">
         </div>
         <div id="icon-text1">
         +48 513106080
@@ -27,7 +28,8 @@
         <div id="icon4"></div>
         <div id="icon-text2">
         olafltd@gmail.com
-        </div>
+        </div> -->
+
         <div class="wrapper">
             <input type="button" onclick="location.href='../O firmie/index.html'" class="list" value="|  O firmie  |" />
             <input type="button" onclick="location.href='../Produkty/index.html'" class="list" value="|  Produkty  |" />
