Skrypt do Postów i Tekstów ogarniety elo

--- a/Logowanie/index.html
+++ b/Logowanie/index.html
@@ -60,7 +60,7 @@
                 <div class="main__article_form_text">Hasło</div>
                 <input class="main__article_form_input" type="password">
             </div>
-        <button class="main__article_form_button">Zaloguj się</button>
+        <input type="submit" value="Zaloguj się" class="main__article_form_button">
         </form>
     </div>
 
