--- a/PanelAdm/index.html
+++ b/PanelAdm/index.html
@@ -50,7 +50,7 @@
     </main>
 </main>
 
-    <div class="main__article">
+    <div onload="Posty()" class="main__article">
         <div class="main__article_item1">
             <input type="submit" onclick="Posty()" class="main__article_item1_input" value="Posty">
             <input type="submit" onclick="Teksty()" class="main__article_item1_input" value="Teksty">
@@ -59,8 +59,6 @@
             <input type="submit" onclick="Uzytkownicy()"  class="main__article_item1_input" value="Użytkownicy">
         </div>
         <div class="main__article_item2" id="masno">
-            <div class="main__article_item2_wrapper" id="niemasno">
-            </div>
         </div>
     </div>
 
