--- a/Logowanie/index.html
+++ b/Logowanie/index.html
@@ -54,7 +54,7 @@
         <form class="main__article_form" action="check.php" method="post">
         <div class="main__article_form_inputs">
             <div class="main__article_form_text">E-mail</div>
-            <input class="main__article_form_input"type="text">
+            <input class="main__article_form_input" type="mail">
         </div>
             <div class="main__article_form_inputs">
                 <div class="main__article_form_text">Hasło</div>
