--- a/Rejestracja/index.html
+++ b/Rejestracja/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O firmie</title>
+    <title>Rejestracja</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/images/icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -55,7 +55,7 @@
                 <div class="main__article_form_inputs">
             
                     <div class="main__article_form_text">E-mail</div>
-                    <input class="main__article_form_input" type="text" placeholder="Jan.Kowalski@gmail.com" name="login">
+                    <input class="main__article_form_input" type="mail" placeholder="Jan.Kowalski@gmail.com" name="login">
                 </div>
                 <div class="main__article_form_inputs">
                     <div class="main__article_form_text">Hasło</div>
