--- a/Produkty/index.html
+++ b/Produkty/index.html
@@ -50,18 +50,17 @@
 </main>
 
     <div class="main__container">
-        <img alt="Ni ma" src="../images/Banne_v3r.jpg" class="main__image">
+        <img alt="Ni ma" src="../images/banner3.png" class="main__image">
         <div class="main__timeline"></div>
         <div class="main__article">
             <div class="main__article_header">Tekst</div>
             <div class="main__article_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam recusandae ipsum odit? Temporibus aspernatur velit corrupti illum optio? Sit similique ducimus laborum deleniti excepturi corrupti soluta laboriosam sequi rerum non blanditiis odio quo explicabo, quidem recusandae perspiciatis facilis officia. Tenetur officia vero voluptas quaerat iste omnis dolores beatae maiores ducimus similique quia, possimus, ipsum sed. Animi dicta architecto quo fugit minus tenetur, illum dolor numquam, inventore a praesentium quidem exercitationem? Eveniet quasi ut similique, mollitia officia, porro minus optio temporibus animi labore dignissimos vitae atque. Quo expedita corporis alias. Qui aliquid tempora, similique, ad aut nulla itaque tenetur incidunt accusamus dolores sint cumque dolorem corrupti totam at quod explicabo sapiente. Iusto eos, doloremque qui et fuga placeat excepturi aliquam tempore aliquid distinctio. Mollitia minima expedita asperiores quasi recusandae adipisci praesentium, debitis quo tempore, similique sapiente laborum eum cum suscipit dolore esse omnis a explicabo? Non eum velit totam quidem iusto!</div>
         </div>
-
     </div>
     
         <footer class="container">
             <div class="container__item1">
-                <img src="../images/Logo1.png" width="140px" height="35px"alt="" class="container__item1_logo">
+                <img src="../images/Logo1.png" width="160px" height="42px"alt="" class="container__item1_logo">
                 <div class="container__item1_text">
                     <h3>OLAF LTD JUSTYNA KONCZUR</h3>
                     05-500 Piaseczno, ul. Kniaziewicza 45/240<br/>
