--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="itemcontainer1">
                     <div id="itemcontainer">
                         <img src="images/Logo3.png" width="82%" height="45%" alt="Olafltd logo" id="icon">
+                        <!-- <img src="images/Logo1.png" width="82%" height="45%" alt="Olafltd logo" id="icon"> -->
                         <div id="item__text">ZADBAMY O TWÓJ SYSTEM LASEROWY JAK NIKT INNY</div>
                     </div>
                 </div>
@@ -76,12 +77,12 @@
                 </div>
             </div>
             <div class="item__gradient"></div>
-            <img class="item__photo" src="images/AdobeStock_379561496.jpeg" width="60%" height="100%" alt="">
+            <img class="item__photo" src="/images/Foto1.jfif" width="60%" height="100%" alt="">
         </div>
 
         <div class="item2">
             <div class="item2__gradient"></div>
-            <img src="images/AdobeStock_197465113.jpeg" class="item2__photo" alt="">
+            <img src="images/Foto2.png" class="item2__photo" alt="">
             <div class="item2__container">
                 <div class="item2__header">JAKOŚĆ</div>
                 <div class="item2__text">Sprzedawane przez nas części są najwyższej jakości, gwarantują
@@ -108,7 +109,7 @@
                 </div>
             </div>
             <div class="item__gradient"></div>
-            <img class="item__photo" src="images/AdobeStock_243092787.jpeg" height="100%" width="60%" alt="">
+            <img class="item__photo" src="images/Foto3.png" height="100%" width="60%" alt="">
         </div>
         
     </section>
@@ -116,7 +117,7 @@
         <div class="container__item1">
             <img src="images/Logo1.png" width="140px" height="35px" alt="" class="container__item1_logo">
             <div class="container__item1_text">
-                <h3>OLAF LTD JUSTYNA KONCZUR</h3>
+                <h3>OLAF LTD JUSTYNA KOCZNUR</h3>
                 05-500 Piaseczno, ul. Kniaziewicza 45/240<br/>
                 tel. +48 513106080, e-mail: olafltd@gmail.com
             </div>    
