--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <nav>
         <img id="nav_logo"src="images/Logo1.png" width="160px" height="42px" alt="">
-        <input type="button" class="list" value="" id="icon1" />
-        <input type="button" class="list" value="" id="icon2" />
+        <form action="index.php" method="post">
+            <input name="lang" type="button" class="list" value="PL" id="icon1" />
+            <input name="lang" type="button" class="list" value="EN" id="icon2" />
+        </form>
         <!-- <div class="nav__text">|</div> -->
 
         <!-- <div id="icon3">
@@ -32,21 +34,21 @@
         <input type="button" onclick="location.href='/Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
 
         <div class="wrapper">
-            <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
-            <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="|  Produkty  |" />
-            <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="|  Maszyny  |" />
-            <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="|  Serwis  |" />
-            <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="|  Kontakt  |" />
+            |<input type="button" onclick="location.href='O firmie/index.html'" class="list" value="O firmie" />|
+            <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="Produkty" />|
+            <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="Maszyny" />|
+            <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="Serwis" />|
+            <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="Kontakt" />
         </div>
     </nav>
 
     <main>
         <div class="mobile-wrapper">
-        <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
-        <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="|  Produkty  |" />
-        <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="|  Maszyny  |" />
-        <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="|  Serwis  |" />
-        <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="|  Kontakt  |" />
+            <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
+            <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="|  Produkty  |" />
+            <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="|  Maszyny  |" />
+            <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="|  Serwis  |" />
+            <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="|  Kontakt  |" />
         </div>
     </main>
 
