--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav>
         <img id="nav_logo"src="images/Logo1.png" width="160px" height="42px" alt="">
-        <form action="index.php" method="post">
-            <input name="lang" type="button" class="list" value="PL" id="icon1" />
-            <input name="lang" type="button" class="list" value="EN" id="icon2" />
+        <form class="list_form" action="index.php" method="post">
+            |<input name="lang" type="button" class="list" value="PL" id="icon1" />
+            |<input name="lang" type="button" class="list" value="EN" id="icon2" />
         </form>
         <!-- <div class="nav__text">|</div> -->
 
@@ -30,8 +30,8 @@
         olafltd@gmail.com
         </div> -->
 
-        <input type="button" onclick="location.href='/Logowanie/index.html'" class="list__login" value="|  Zaloguj się  |" />
-        <input type="button" onclick="location.href='/Rejestracja/index.html'" class="list__login" value="|  Zarejestruj się  |" />
+        <div class="list__login_text1">|</div><input type="button" onclick="location.href='/Logowanie/index.html'" class="list__login" value="Zaloguj się" />
+        <div class="list__login_text2">|</div><input type="button" onclick="location.href='/Rejestracja/index.html'" class="list__login" value="Zarejestruj się" /><div class="list__login_text3">|</div>
 
         <div class="wrapper">
             |<input type="button" onclick="location.href='O firmie/index.html'" class="list" value="O firmie" />|
@@ -44,11 +44,11 @@
 
     <main>
         <div class="mobile-wrapper">
-            <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="|  O firmie  |" />
-            <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="|  Produkty  |" />
-            <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="|  Maszyny  |" />
-            <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="|  Serwis  |" />
-            <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="|  Kontakt  |" />
+            <input type="button" onclick="location.href='O firmie/index.html'" class="list" value="O firmie" />|
+            <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="Produkty" />|
+            <input type="button" onclick="location.href='Maszyny/index.html'" class="list" value="Maszyny" />|
+            <input type="button" onclick="location.href='Serwis/index.html'" class="list" value="Serwis" />|
+            <input type="button" onclick="location.href='Kontakt/index.html'" class="list" value="Kontakt" />|
         </div>
     </main>
 
