--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <nav>
         <img id="nav_logo"src="images/Logo1.png" width="160px" height="42px" alt="">
 
-        <div class="wrapper">
+        <div class="wrapper" style="
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        ">
             |<input type="button" onclick="location.href='O firmie/index.html'" class="list" value="O firmie" />
             |
             <input type="button" onclick="location.href='Produkty/index.html'" class="list" value="Produkty" />
