popraweczki masne elo elo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav>
-        <img id="nav_logo"src="images/Logo1.png" width="160px" height="42px" alt="">
+        <img id="nav_logo"src="images/Logo1.png" width="10%" height="42px" alt="">
 
         <div class="wrapper">
             <input type="button" onclick="location.href='O firmie/index.html'" style="margin-right: 2%"class="list" value="O firmie" />
@@ -55,7 +55,7 @@
                 <img class="item1__photo" src="images/AdobeStock_202237980.jpeg" alt="OlafLTD logo" width="100%" height="100%">
                 <div class="itemcontainer1">
                     <div id="itemcontainer">
-                        <img src="images/Logo3.png" alt="Olafltd logo" id="icon">
+                        <!-- <img src="images/Logo3.png" alt="Olafltd logo" id="icon"> -->
                         <!-- <img src="images/Logo1.png" width="82%" height="45%" alt="Olafltd logo" id="icon"> -->
                         <div id="item__text">ZADBAMY O TWÓJ SYSTEM LASEROWY JAK NIKT INNY</div>
                     </div>
@@ -116,13 +116,14 @@
     <footer class="container">
         <div class="container__item1">
             <img src="images/Logo1.png" width="140px" height="35px" alt="" class="container__item1_logo">
-            <div class="container__item1_text">
-                <h3>OLAF LTD JUSTYNA KOCZNUR</h3>
+            <a href="" class="container__item1_text">
+                <!-- <h3>OLAF LTD JUSTYNA KOCZNUR</h3>
                 05-500 Piaseczno, ul. Kniaziewicza 45/240<br/>
-                tel. +48 513106080, e-mail: olafltd@gmail.com
-            </div>    
+                tel. +48 513106080, e-mail: olafltd@gmail.com -->
+                Polityka prywatności
+            </a>    
         </div>
-        <div class="container__item2">designed by OPT (OurProjectTeam)</div>
+        <div class="container__item2">designed</div>
     </footer>
 
 </body>
