--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav>
-        <img id="nav_logo"src="images/Logo1.png" width="10%" height="42px" alt="">
+        <img id="nav_logo"src="images/Logo1.png" width="11%" height="100%" alt="">
 
         <div class="wrapper">
             <input type="button" onclick="location.href='O firmie/index.html'" style="margin-right: 2%"class="list" value="O firmie" />
