nie ma paddingu

--- a/Serwis/index.html
+++ b/Serwis/index.html
@@ -70,6 +70,7 @@
         </div>
         <div class="main__article_item3">
             <div class="main__article_item3_container">
+                <input type="search" class="main__article_item3_input">
                 <div class="main__article_item3_header">Serwis</div>
                 <div class="main__article_item3_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti beatae, eum porro eveniet quos similique cumque optio praesentium, iste repudiandae dolore vel amet ratione officia quae fuga autem delectus quidem! Harum, rerum saepe. Dolorem at in commodi illo corrupti natus eius veritatis quod maxime nam, soluta tenetur deserunt ipsa magni!</div>
             </div>
