3 strony i prawie skończone drzewka

--- a/PanelAdm/nowyPanelAdm/index.html
+++ b/PanelAdm/nowyPanelAdm/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato&  display=swap" rel="stylesheet">
+    <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
     <main class="container">
@@ -17,7 +18,16 @@
 
         <div class="main__article">
             <div class="main__article_item1">
-                Id: 6 - Nazwa: kekekkekeke - Producent: TfujStary - Typ: Twój mały
+                <li id="nest" class="nest" onclick="nesting()">Drzewko
+                    <!-- <li class="nested">Cie
+                        <li class="nested">Kurwa</li>
+                        <li class="nested"></li>
+                        <li class="nested"></li>
+                        <li class="nested"></li>
+                        <li class="nest"></li>
+                    </li> -->
+                    </li>
+                    
             </div>
             <div class="main__article_item2">
                 <div class="main__article_item2_container">
